--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ check_untyped_defs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --cov=src --cov-report=term-missing"
+addopts = "-s -v --cov=src --cov-report=term-missing"
 
 [tool.coverage.run]
 omit = ["tests/*", "*/test_*.py"]
